# todo-app

./: .gitignore  README.md
.claude/agents/: spec-driven-architect.md
.claude/agents/sub-agents/: dapr-cloud-native-engineer.md  deployment-aiops-engineer.md  frontend-ux-engineer.md  mcp-tool-engineer.md  spec-architect.md  system-architect.md
.claude/skills/: sp.adr.md  sp.analyze.md  sp.checklist.md  sp.clarify.md  sp.constitution.md  sp.git.commit_pr.md  sp.implement.md  sp.phr.md  sp.plan.md  sp.reverse-engineer.md  sp.specify.md  sp.tasks.md  sp.taskstoissues.md
.specify/memory/: constitution.md
history/prompts/constitution/: 001-initial-constitution-ratification.constitution.prompt.md
history/prompts/phase1-cli-todo/: 001-phase1-implementation-plan.plan.prompt.md  002-phase1-task-breakdown.tasks.prompt.md  003-phase1-implementation.green.prompt.md  (+1 more)
phase1/: README.md  pyproject.toml
phase1/src/: models.py  repository.py  service.py
phase2/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
phase2/app/: globals.css  layout.tsx  page.tsx
phase2/lib/: auth.ts  validations.ts
phase2/prisma/: schema.prisma
specs/features/: phase2-fullstack-web.md
specs/phase1-cli-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/phase2-fullstack-web/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
src/: __init__.py  __main__.py  cli.py  exceptions.py  main.py  persistence.py
web/: .env.local.example  IMPLEMENTATION_SUMMARY.md  README.md  middleware.ts
web/app/: layout.tsx  page.tsx
(+30 files in other folders)
