[project]
name = "todo-app"
version = "0.1.0"
description = "Phase I: In-Memory Python Console Todo App"
# readme = "README.md"  # Uncomment when README exists
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Zohaib", email = "zohaib@example.com"}
]
keywords = ["todo", "cli", "task-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
todo = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
